--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,7 @@
 # Site navigation links
 
-- title: Projects
-  url: /projects/
+# - title: Projects
+#   url: /projects/
+
+- title: 	Travel Blog
+  url: 		https://believeyoucanyouwill.wordpress.com/
