Update Resume. (+1 squashed commits)
Squashed commits:

[be341da] Update Resume. (+1 squashed commits)

Squashed commits:

[a823328] Adds resume to home, nav, and about.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,6 @@
 
 - title: 	Travel Blog
   url: 		https://believeyoucanyouwill.wordpress.com/
+
+- title:	Resume
+  url:		/assets/files/Brian Sinclair.pdf
