--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ tiled_bg:           false   # Set this true if you want to tile your background 
 locale:             en_US
 posts_page:         false
 projects_page:      false
-# url:                http://www.sinclairbrian.com
-url:                http://localhost:4000
+url:                http://www.sinclairbrian.com
+# url:                http://localhost:4000
 blog_url:           https://believeyoucanyouwill.wordpress.com/
 
 # Jekyll
